# Human-robot-interaction

./: CMakeLists.txt  Leap_server_industrial.py  README.md  package.xml  palm_direction.py  robot_control_industrial.py  robot_control_industrial_2.py  robot_control_industrial_3.py  robot_control_industrial_4.py
human_robot_interaction/launch/: leap_ros.launch  leap_ros_robot.launch
launch/: README.md  leap_ros_robot.launch  leap_ros_robot_industrial.launch
leap/: CMakeLists.txt
leap/Tests/: picking.py
leap/launch/: leap_ros_robot.launch
leap/scripts/trial3/: LeapListener2.py  Leap_client2.py  robot_control2.py  robot_control3.py  robot_control4.py
msg/: JointGroupCommand.msg  JointSingleCommand.msg  orientation.msg  up_or_down.msg
scripts/: README.md
scripts/Industrial_like_robot/: LeapListener_industrial.py  Leap_client_industrial.py  Leap_server_industrial.py  README.md  README:md  hand_status_industrial.py  robot_control_industrial.py  robot_control_industrial_2.py  robot_control_industrial_3.py  robot_control_industrial_4.py
scripts/demonstrator_hold_hand/: LeapListener_demonstrator.py  Leap_client_demonstrator.py  Leap_server_demonstrator.py  hand_status_demonstrator.py  robot_control_demonstrator.py
